syntax="proto3";

package grpc_crud;

option go_package = "grpc_crud/pb";

service LoginService{

  // User Register
  rpc Register(UserRegisterRequest) returns (UserRegisterResponse) {}


  // User login
  rpc Login(UserLoginRequest) returns (UserLoginResponse) {}

  // User logout
  rpc Logout(UserLogoutRequest) returns (UserLogoutResponse) {}

  // Refresh access token
  rpc RefreshToken(TokenRequest) returns (TokenResponse) {}
}

// Request message for user registration.
message UserRegisterRequest {
  string username = 1;
  string email =2;
  string password = 3;
}

// Response message for user registration.
message UserRegisterResponse {
  string message = 1;
}

// Request message for user login.
message UserLoginRequest {
    string username = 1;
    string password = 2;
}

// Response message for user login.
message UserLoginResponse {
    string access_token = 1;
    string refresh_token = 2;
    string message = 3;
}

// Request message for user logout.
message UserLogoutRequest {
    string access_token = 1;
}

// Response message for user logout.
message UserLogoutResponse {
    string message = 1;
}

// Request message for token refresh.
message TokenRequest {
    string refresh_token = 1;
}

// Response message for token refresh.
message TokenResponse {
    string access_token = 1;
    string refresh_token = 2;
}


